// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components | connexion | submit-button snapshot correspond a l'etat disabled 1`] = `
<SubmitButton
  classes={
    Object {
      "circularProgress": "SubmitButton-circularProgress-1",
      "container": "SubmitButton-container-2",
      "fab": "SubmitButton-fab-3",
      "fabDisabled": "SubmitButton-fabDisabled-4",
    }
  }
  disabled={true}
  isLoading={false}
/>
`;

exports[`components | connexion | submit-button snapshot correspond a l'etat loading 1`] = `
<SubmitButton
  classes={
    Object {
      "circularProgress": "SubmitButton-circularProgress-1",
      "container": "SubmitButton-container-2",
      "fab": "SubmitButton-fab-3",
      "fabDisabled": "SubmitButton-fabDisabled-4",
    }
  }
  disabled={false}
  isLoading={true}
/>
`;

exports[`components | connexion | submit-button snapshot correspond a l'etat normal 1`] = `
<SubmitButton
  classes={
    Object {
      "circularProgress": "SubmitButton-circularProgress-1",
      "container": "SubmitButton-container-2",
      "fab": "SubmitButton-fab-3",
      "fabDisabled": "SubmitButton-fabDisabled-4",
    }
  }
  disabled={false}
  isLoading={false}
/>
`;
